[gd_scene load_steps=10 format=3 uid="uid://bc2jtreq5e56n"]

[ext_resource type="Script" uid="uid://8jw71fnp2q5i" path="res://UI/UpgradeShopUI/UpgradeCards/upgrade_card.gd" id="1_1v4fj"]
[ext_resource type="Texture2D" uid="uid://bugddpjchwltt" path="res://UI/UpgradeShopUI/UpgradeCards/upgrade_card_magnet.png" id="2_e3owr"]
[ext_resource type="Texture2D" uid="uid://c08u15g6gioi8" path="res://UI/UpgradeShopUI/UpgradeCards/upgrade_unknown.png" id="3_222e7"]
[ext_resource type="Texture2D" uid="uid://cvjsd3hpufjmu" path="res://UI/UpgradeShopUI/UpgradeCards/upgrade_fruit_relocator.png" id="3_b3bcc"]
[ext_resource type="Texture2D" uid="uid://b161olsa0qjye" path="res://UI/UpgradeShopUI/UpgradeCards/upgrade_hper_speed.png" id="4_j6wqs"]
[ext_resource type="Texture2D" uid="uid://bdpaa7gk1v72r" path="res://UI/UpgradeShopUI/UpgradeCards/upgrade_card_magnet_2.png" id="5_r303a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_222e7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e3owr")
}, {
"duration": 1.0,
"texture": ExtResource("3_b3bcc")
}, {
"duration": 1.0,
"texture": ExtResource("4_j6wqs")
}, {
"duration": 1.0,
"texture": ExtResource("5_r303a")
}, {
"duration": 1.0,
"texture": ExtResource("3_222e7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1v4fj"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1v4fj"]
size = Vector2(120, 120)

[node name="UpgradeCard" type="Control" groups=["UpgradeCard"]]
z_index = 10
custom_minimum_size = Vector2(120, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 120.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_1v4fj")

[node name="CardSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(60, 60)
sprite_frames = SubResource("SpriteFrames_222e7")
frame = 1
frame_progress = 0.467309

[node name="CardShadow" type="Sprite2D" parent="CardSprite"]
modulate = Color(0, 0, 0, 0.635294)
show_behind_parent = true
texture = SubResource("CompressedTexture2D_1v4fj")

[node name="CardArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
position = Vector2(60, 60)
shape = SubResource("RectangleShape2D_1v4fj")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
